# qt-map1

./: .gitignore  AppSettings.cpp  AppSettings.h  CMakeLists.txt  FloatGridMaterial.cpp  FloatGridMaterial.h  GridLoader.cpp  GridLoader.h  GridManager.cpp  GridManager.h  GridTileCache.cpp  GridTileCache.h  LayerManager.cpp  LayerManager.h  Logger.cpp  Logger.h  OverlayItem.cpp  OverlayItem.h  PaletteManager.cpp  PaletteManager.h  PinManager.cpp  PinManager.h  README.md  banner.txt  grids.json  how-to-make.txt  layers.json  main.cpp  main.qml  palettes.json  secrets.cmake.example
.claude/: settings.local.json
.github/workflows/: build.yml
providers/: cycle
shaders/: floatgrid.frag  floatgrid.vert
